Fixed footer and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,7 @@ h2, h3, h4{
 
 .projects .container{
     padding-top: 6%;
+    padding-bottom: 5%;
 }
 
 .projects h2{
